{
    "name": "PacmanControl",
    "maps": [
        {
            "name": "pacman",
            "id": "30073dd5-c676-476b-b944-61d8e6185fd1",
            "actions": [
                {
                    "name": "MoveH",
                    "type": "Value",
                    "id": "6c49f45f-dc54-4730-afec-b8d61ad345d2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveV",
                    "type": "Value",
                    "id": "33f4cfa1-6e3b-49ac-a66f-550f98876c38",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "AD",
                    "id": "36f9d853-464f-47b9-9a99-4b498cd57f6e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveH",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "ac084db8-aec7-4975-b2b2-23a7fd25617c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard and Mouse",
                    "action": "MoveH",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "8cc965f0-cb98-4d34-846d-982c939ec538",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard and Mouse",
                    "action": "MoveH",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrow",
                    "id": "1e730aa2-ba35-42ba-8511-263565bac4eb",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveH",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "99521e15-cd9a-4bc0-84f2-e541271fd418",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard and Mouse",
                    "action": "MoveH",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "dc7faa1e-fda4-406b-a2b7-716685a69e86",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard and Mouse",
                    "action": "MoveH",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Gamepad",
                    "id": "2440dda1-4057-49da-96dd-7db5ed8cd8be",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveH",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "6e45fb98-d8bc-403f-a8f7-4aec6f86e364",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "MoveH",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "7522e3f8-6b70-44a1-9de3-b4dcd6ca062f",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "MoveH",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "WS",
                    "id": "02f10498-46e5-4f1c-94a2-cc4f6ddacf5a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveV",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "5921b04f-963b-47a6-9ee9-e71ab3262678",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard and Mouse",
                    "action": "MoveV",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "99909f76-3451-47c9-829f-ec9bd1b38c7f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard and Mouse",
                    "action": "MoveV",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrow",
                    "id": "0a66b316-f225-401d-8014-e2581df7c133",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveV",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "dec2f466-7e40-4180-aa05-8f0ac30d5f07",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard and Mouse",
                    "action": "MoveV",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "bfb03000-4996-4f64-9fbe-9f9633ce97bd",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard and Mouse",
                    "action": "MoveV",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "gamepad",
                    "id": "b61f2722-03bc-4f31-af49-1f302b151c76",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveV",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "6c2aee85-f9a3-403e-82a9-4ce257d527c1",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "MoveV",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "959c7d8d-6c8d-467d-bfd6-18385e708acd",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "MoveV",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Menu",
            "id": "54d0d85f-db48-4d22-935b-49978c9d6bfe",
            "actions": [
                {
                    "name": "QuitGame",
                    "type": "Button",
                    "id": "e520305e-0318-4fd7-9b8d-a6fa1711a408",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "324c0a3c-a0bf-4cd6-8154-07bcaf4fdcd8",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard and Mouse",
                    "action": "QuitGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<SwitchProControllerHID>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        },
        {
            "name": "KeyBoard and Mouse",
            "bindingGroup": "KeyBoard and Mouse",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": true,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}